--- a/Xamarin/app/app/Views/LoginPage.xaml
+++ b/Xamarin/app/app/Views/LoginPage.xaml
@@ -6,7 +6,7 @@
         <ScrollView>
             <StackLayout
                 Padding="15"
-                BackgroundColor="Green">
+                BackgroundColor="White">
                 <Image
                   Source="">               
                   </Image>
@@ -19,7 +19,7 @@
                         Grid.Row="0"
                         Grid.Column="0"
                         Text="Email"
-                        TextColor="White"
+                        TextColor="Blue"
                         >
                     </Label>
                     <Entry
@@ -32,7 +32,7 @@
                         Grid.Row="1"
                         Grid.Column="0"
                         Text="Password"
-                        TextColor="White"
+                        TextColor="Blue"
                         >
                     </Label>
                     <Entry
@@ -46,7 +46,7 @@
                 <ActivityIndicator>
                  </ActivityIndicator>
                 <Button
-                    BackgroundColor="Brown"
+                    BackgroundColor="Blue"
                     Text="Login"
                     TextColor="White">
                  </Button>
